<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btnluis"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_marginTop="204dp"
        android:onClick="onClick"
        android:text="@string/main_a_text3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnQuienesSomos"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_marginTop="516dp"
        android:onClick="onClick"
        android:text="@string/valQuienesSomos"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_marginTop="616dp"
        android:onClick="onClick"
        android:text="@string/valEnviarCorreo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnContactarDueno"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_marginTop="408dp"
        android:onClick="onClick"
        android:text="@string/valContactarDueno"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVisitarWeb"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_marginTop="296dp"
        android:onClick="onClick"
        android:text="@string/btnVisitarWeb"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnestefani"
        android:layout_width="194dp"
        android:layout_height="80sp"
        android:layout_marginTop="108dp"
        android:onClick="onClick"
        android:text="@string/main_a_text2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnmariano"
        android:layout_width="180sp"
        android:layout_height="80sp"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/main_a_text1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>